; ModuleID = '/home/carl/AnghaBench/linux/drivers/firmware/extr_arm_sdei.c__local_event_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/firmware/extr_arm_sdei.c__local_event_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdei_crosscall_args = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @_local_event_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_local_event_enable(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.sdei_crosscall_args*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.sdei_crosscall_args*
  store %struct.sdei_crosscall_args* %6, %struct.sdei_crosscall_args** %4, align 8
  %7 = call i32 (...) @preemptible()
  %8 = call i32 @WARN_ON_ONCE(i32 %7)
  %9 = load %struct.sdei_crosscall_args*, %struct.sdei_crosscall_args** %4, align 8
  %10 = getelementptr inbounds %struct.sdei_crosscall_args, %struct.sdei_crosscall_args* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @sdei_api_event_enable(i32 %13)
  store i32 %14, i32* %3, align 4
  %15 = load %struct.sdei_crosscall_args*, %struct.sdei_crosscall_args** %4, align 8
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @sdei_cross_call_return(%struct.sdei_crosscall_args* %15, i32 %16)
  ret void
}

declare dso_local i32 @WARN_ON_ONCE(i32) #1

declare dso_local i32 @preemptible(...) #1

declare dso_local i32 @sdei_api_event_enable(i32) #1

declare dso_local i32 @sdei_cross_call_return(%struct.sdei_crosscall_args*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
